k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: devsecops
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: app
          image: 491377098012.dkr.ecr.us-east-1.amazonaws.com/hybrid-devsecops-etb101:v3
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
